objects/ProductConsumed.object
<CustomObject>
    <fields>
        <fullName>Consumed_by_Service__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Required. Relationship to a Service to allow creation of Product Consumed.</description>
        <label>Consumed by Service</label>
        <referenceTo>CKSW_BASE__Service__c</referenceTo>
        <relationshipLabel>Products Consumed</relationshipLabel>
        <relationshipName>Products_Consumed</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Matching_Service_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matching Service Part</label>
        <referenceTo>Service_Part__c</referenceTo>
        <relationshipLabel>Matching Products Consumed</relationshipLabel>
        <relationshipName>Matching_Products_Consumed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>ProductItem.Product_Code__c</formula>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <formula>ProductItem.Product_Description__c</formula>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>